# SearchAnywhere

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
anlocate/: Cargo.toml
anlocate/anlocate_cli/: Cargo.toml
anlocate/anlocate_cli/src/: main.rs
anlocate/src/: android.rs  build.rs  compress.rs  lib.rs  search.rs  stat.rs  util.rs
app/: build.gradle.kts
app/schemas/se.kalind.searchanywhere.data.SearchAnywhereDatabase/: 1.json
app/schemas/se.kalind.searchanywhere.data.local.database.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/java/se/kalind/searchanywhere/: SearchAnywhereApplication.kt  SearchAnywhereFileProvider.kt
app/src/main/java/se/kalind/searchanywhere/data/: SearchAnywhereDatabase.kt
app/src/main/java/se/kalind/searchanywhere/di/: ApplicationModule.kt
app/src/main/java/se/kalind/searchanywhere/domain/: AppsRepository.kt  FilesRepository.kt  ItemType.kt  SettingsRepository.kt  Util.kt  (+1 more)
app/src/main/res/drawable/: file.xml  folder_open.xml  ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/se/kalind/searchanywhere/: ExampleUnitTest.kt
data/: build.gradle.kts
data/schemas/se.kalind.searchanywhere.data.SearchAnywhereDatabase/: 1.json
domain/: build.gradle.kts
gradle/: libs.versions.toml
gradle/plugins/src/main/kotlin/: anlocate-plugin.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
presentation/: build.gradle.kts
presentation/src/main/res/values/: strings.xml
(+88 files in other folders)
