[package]
name = "anlocate"
version = "0.1.0"
edition = "2021"

[dependencies]
unicase = "2.7.0"
nanorand = "0.7.0"

[dev-dependencies]
tempfile = "3.10.1"

[lib]
crate-type = ["dylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[profile.release]
strip = true
